syntax = "proto3";

import "types.proto";

option go_package = "proto";

// CreateVMRequest specifies creation parameters for a new FC instance
message CreateVMRequest {
    // VM identifier to assign
    string VMID = 1;

    // Specifies the machine configuration for the VM
    FirecrackerMachineConfiguration MachineCfg = 2;

    // Specifies the file path where the kernel image is located
    string KernelImagePath = 3;

    // Specifies the commandline arguments that should be passed to the kernel
    string KernelArgs = 4;

    // Specifies the root block device for the VM
    FirecrackerDrive RootDrive = 5;

    // Specifies the additional block device config for the VM.
    repeated FirecrackerDrive AdditionalDrives = 6;

    // Specifies the networking configuration for a VM
    repeated FirecrackerNetworkInterface NetworkInterfaces = 7;

    // The number of dummy drives to reserve in advance before running FC instance.
    int32 ContainerCount = 8;
}

message StopVMRequest {
    string VMID = 1;
}

message GetVMInfoRequest {
    string VMID = 1;
}

message GetVMInfoResponse {
    string VMID = 1;
    uint32 ContextID = 2;
    string SocketPath = 3;
    string LogFifoPath = 4;
    string MetricsFifoPath = 5;
}

message SetVMMetadataRequest {
    string VMID = 1;
    string Metadata = 2;
}